添加电影数据结构，新增电影查询接口
