# docs/swagger.json
@@ -45,7 +45,7 @@
                 }
             }
         },
-        "/upload/applayUpload": {
+        "/oss/upload/applayUpload": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/upload/initMultipartUpload": {
+        "/oss/upload/initMultipartUpload": {
             "post": {
                 "description": "初始化分片上传",
                 "consumes": [
@@ -117,7 +117,7 @@
                 "responses": {}
             }
         },
-        "/upload/multipart/abort/{fid}": {
+        "/oss/upload/multipart/abort/{fid}": {
             "post": {
                 "description": "中断分片上传",
                 "tags": [
@@ -143,7 +143,7 @@
                 "responses": {}
             }
         },
-        "/upload/multipart/complete/{fid}": {
+        "/oss/upload/multipart/complete/{fid}": {
             "post": {
                 "description": "完成分片上传",
                 "tags": [
@@ -176,7 +176,7 @@
                 "responses": {}
             }
         },
-        "/upload/multipart/{fid}": {
+        "/oss/upload/multipart/{fid}": {
             "post": {
                 "description": "分片上传",
                 "consumes": [
@@ -236,7 +236,7 @@
                 "responses": {}
             }
         },
-        "/upload/putFile/{fid}": {
+        "/oss/upload/putFile/{fid}": {
             "post": {
                 "description": "直接上传文件",
                 "consumes": [
